#3717: wip benchmark